# Performance-Review

.github/workflows/: django.yml  docker-image.yml
backend/docker/development/: docker-compose.yml
backend/docker/production/: docker-compose.yml
backend/review/: .dockerignore  api.Dockerfile  pyproject.toml  schema.graphql  statics.Dockerfile
backend/review/accounts/: models.py
backend/review/accounts/schema/: login_mutation.py
backend/review/core/: admin.py  enums.py  models.py
backend/review/core/interactors/: authorization.py  competencies.py  person_review.py  project_review.py  settings.py
backend/review/core/migrations/: 0044_competencies_alter_personreview_options_and_more.py  0045_round_max_competency_target.py  0046_alter_competenciesanswers_rating_personreviewmention.py  0047_personreview_mention_users_and_more.py  0048_personreview_strength.py
backend/review/core/schema/: competencies_answers_mutation.py  competencies_query.py  core_mutations.py  core_query.py  enums.py  person_review_query.py  round_query.py  save_person_review_mutation.py
backend/review/graphql_api/schema/: with_viewer.py
backend/review/review/: urls.py
frontend/: Dockerfile  package.json  schema.graphql
frontend/src/containers/main/: MainContainer.tsx  getMenuItems.ts
frontend/src/locales/en/: messages.po
frontend/src/locales/fa/: messages.po
frontend/src/pages/competencies-page/: CompetenciesForm.tsx  CompetenciesPage.tsx  DescriptionContent.mdx
frontend/src/pages/problem-solving-page/: ProblemSolvingPage.tsx
frontend/src/shared/tab/: TabLink.tsx
(+13 files in other folders)
