[tool.poetry]
name = "performance-review-backend"
version = "0.3.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-environ = "^0.10.0"
graphene-django = "^3.1"
graphene = "^3.3"
django-filter = "^23.2"
psycopg-binary = "^3.1"
psycopg2-binary = "^2.9"
django-cors-headers = "^4.2"
gunicorn = "^21.2"
toml = "^0.10.0"
django-model-utils = "^4.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"